--- a/src/app/components/chart1/chart1.component.html
+++ b/src/app/components/chart1/chart1.component.html
@@ -1,28 +1,28 @@
 <div class="row">
     <div class="col-lg-6">
 
-        <h2> Pie chart </h2>
+        <h2> Account name - Total cost </h2>
         <canvas id="piechart"> </canvas>
     </div>
     <div class="col-lg-6">
 
-        <h2> Bar chart </h2>
+        <h2> Account name - Total cost </h2>
         <canvas id="barchart"> </canvas>
     </div>
 
     <div class="col-lg-6">
 
-        <h2> Line chart </h2>
+        <h2> Cost - Day </h2>
         <canvas id="linechart"> </canvas>
     </div>
-    <!-- 
+
     <div class="col-lg-6">
 
-        <h2> doughnut chart </h2>
-        <canvas id="doughnutchart"> </canvas>
+        <h2> Project id - Total cost </h2>
+        <canvas id="piechart1"> </canvas>
     </div>
 
-
+    <!-- 
     <div class="col-lg-6">
 
         <h2> Polararea chart </h2>
@@ -41,11 +41,8 @@
 
 </div>
 
-<br />
-<br />
-<br />
 <hr>
-
+<h2> Total Spend : {{sum}} </h2>
 <hr>
 
 <div class="container mt-5">
@@ -73,14 +70,3 @@
         </tbody>
     </table>
 </div>
-
-
-
-<br />
-<br />
-<br />
-<hr>
-
-<hr>
-
-<h2> Total Spend : </h2>
