--- a/src/app/components/chart1/chart1.component.html
+++ b/src/app/components/chart1/chart1.component.html
@@ -1,28 +1,30 @@
-<div class="row">
-    <div class="col-lg-6">
+<div class="container">
 
-        <h2> Account name - Total cost </h2>
-        <canvas id="piechart"> </canvas>
-    </div>
-    <div class="col-lg-6">
+    <div class="row">
+        <div class="col-sm-6">
 
-        <h2> Account name - Total cost </h2>
-        <canvas id="barchart"> </canvas>
-    </div>
+            <h2> Account name - Total cost </h2>
+            <canvas id="piechart"> </canvas>
+        </div>
+        <div class="col-sm-6">
 
-    <div class="col-lg-6">
+            <h2> Account name - Total cost </h2>
+            <canvas id="barchart"> </canvas>
+        </div>
 
-        <h2> Cost - Day </h2>
-        <canvas id="linechart"> </canvas>
-    </div>
+        <div class="col-sm-6">
 
-    <div class="col-lg-6">
+            <h2> Cost - Day </h2>
+            <canvas id="linechart"> </canvas>
+        </div>
 
-        <h2> Project id - Total cost </h2>
-        <canvas id="piechart1"> </canvas>
-    </div>
+        <div class="col-sm-6">
 
-    <!-- 
+            <h2> Project id - Total cost </h2>
+            <canvas id="piechart1"> </canvas>
+        </div>
+
+        <!-- 
     <div class="col-lg-6">
 
         <h2> Polararea chart </h2>
@@ -39,8 +41,8 @@
         <canvas id="scatterchart"> </canvas>
     </div> -->
 
+    </div>
 </div>
-
 <hr>
 <h2> Total Spend : {{sum}} </h2>
 <hr>
@@ -70,3 +72,8 @@
         </tbody>
     </table>
 </div>
+
+<hr />
+<br />
+<br />
+<br />
