--- a/src/app/components/chart1/chart1.component.html
+++ b/src/app/components/chart1/chart1.component.html
@@ -44,8 +44,8 @@
     </div>
 </div>
 <hr>
-<h2> Total Spend : {{sum}} </h2>
-<h2> Most project Cost : {{ mostCostProject }} = {{ (mostCostProject*100)/sum }} % </h2>
+<h2> Total Spend : {{sum}} $ </h2>
+<h2> Most project Cost : {{ mostCostProject }} $ = {{ (mostCostProject*100)/sum }} % </h2>
 
 <hr>
 
